--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </section>
     <!-- Information about the project -->
     <section>
+        <h2>Наши преимущества</h2>
             <ul>
                 <li>
                     <img src="./images/about-company/Vector.svg" alt="локатор">
@@ -60,7 +61,7 @@
             </ul>
     </section>        
     <section>
-            <h2>Чем мы занимаемся</h2>
+        <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
                     <a href=""><img src="./images/about-company/img.png" alt="открытый-ноутбук"
@@ -90,37 +91,77 @@
                 <img src="./images/team-photos/smith.jpg" alt="фото-дизайнера-продукта-Джон-Смит" width="278" height="260">
                 <h3 lang="en">John Smith</h3>
                 <p lang="en">Product Designer</p>
-                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
-                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
-                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
-                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
+                <ul>
+                    <li>
+                        <a href="https://instagram.com" aria-label="Ссылка на Instagram"></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com" aria-label="Ссылка на Twitter"></a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com" aria-label="Ссылка на Facebook"></a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com" aria-label="Ссылка на LinkedIn"></a>
+                    </li>
+                </ul>  
             </li>
             <li>
                 <img src="./images/team-photos/stewart.jpg" alt="фото-разработчика-Марта-Стюарт" width="278" height="260">
                 <h3 lang="en">Marta Stewart</h3>
                 <p lang="en">Frontend Developer</p>
-                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
-                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
-                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
-                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
+                <ul>
+                    <li>
+                        <a href="https://instagram.com" aria-label="Ссылка на Instagram"></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com" aria-label="Ссылка на Twitter"></a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com" aria-label="Ссылка на Facebook"></a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com" aria-label="Ссылка на LinkedIn"></a>
+                    </li>
+                </ul>  
             </li>
             <li>
                 <img src="./images/team-photos/jakis.jpg" alt="фото-специалиста-по-маркетингу-Роберт-Джакис" width="278" height="260">
                 <h3 lang="en">Robert Jakis</h3>
                 <p lang="en">Marketing</p>
-                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
-                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
-                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
-                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
+                <ul>
+                    <li>
+                        <a href="https://instagram.com" aria-label="Ссылка на Instagram"></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com" aria-label="Ссылка на Twitter"></a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com" aria-label="Ссылка на Facebook"></a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com" aria-label="Ссылка на LinkedIn"></a>
+                    </li>
+                </ul>  
             </li>
             <li>
                 <img src="./images/team-photos/doe.jpg" alt="фото-дизайнера-Мартин-До" width="278" height="260">
                 <h3 lang="en">Martin Doe</h3>
                 <p lang="en">UI Designer</p>
-                <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
-                <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
-                <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
-                <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
+                <ul>
+                    <li>
+                        <a href="https://instagram.com" aria-label="Ссылка на Instagram"></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com" aria-label="Ссылка на Twitter"></a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com" aria-label="Ссылка на Facebook"></a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com" aria-label="Ссылка на LinkedIn"></a>
+                    </li>
+                </ul>  
             </li>
             
         </ul>
@@ -154,16 +195,27 @@
     <footer>
         <div>
             <a href="" lang="en">WebStudio</a>
-            <address>г. Киев, пр-т Леси Украинки, 26</address>
+            <address>г. Киев, пр-т Леси Украинки, 26
             <a href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+380991111111">+38 099 111 11 11</a>
+            </address>
         </div>
         <div>
             <p>присоединяйтесь</p>
-            <a href="https://instagram.com"><img src="./images/social-links-icons/instagram.svg" alt="иконка-инстаграмма"></a>
-            <a href="https://twitter.com"><img src="./images/social-links-icons/twitter.svg" alt="иконка-твиттера"></a>
-            <a href="https://facebook.com"><img src="./images/social-links-icons/facebook.svg" alt="иконка-фейсбука"></a>
-            <a href="https://linkedin.com"><img src="./images/social-links-icons/linkedin.svg" alt="иконка-линкед-ина"></a>
+            <ul>
+                <li>
+                    <a href="https://instagram.com" aria-label="Ссылка на Instagram"></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" aria-label="Ссылка на Twitter"></a>
+                </li>
+                <li>
+                    <a href="https://facebook.com" aria-label="Ссылка на Facebook"></a>
+                </li>
+                <li>
+                    <a href="https://linkedin.com" aria-label="Ссылка на LinkedIn"></a>
+                </li>
+            </ul>  
         </div>
         <div>
             <p>подписаться на рассылку</p>
